Set up react-rails & webpacker

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,10 @@ yarn-error.log*
 *.swo
 *.tmproj
 dump.rdb
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
