--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
+    "react-select": "^3.1.0",
     "react_ujs": "^2.6.1",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
